Menambahkan fungsi checkin dan persiapan migrate DB server baru
